se modifican movil responsive en index

--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,5 +1,5 @@
 .presentacion{ 
-    padding: 50px 100px 50px 100px;
+    padding: 10%;
     h2{
         font-size: 3rem;
         text-align: center;
