--- a/css/estilo.css
+++ b/css/estilo.css
@@ -53,7 +53,7 @@ header {
     border-radius: 30px; }
 
 .presentacion {
-  padding: 50px 100px 50px 100px; }
+  padding: 10%; }
   .presentacion h2 {
     font-size: 3rem;
     text-align: center;
@@ -170,7 +170,7 @@ header {
 
 .formularioContacto {
   margin-top: 50px;
-  padding: 100px 100px 50px 100px;
+  padding: 10%;
   font-size: 14pt;
   font-family: 'Roboto Condensed', sans-serif; }
   .formularioContacto fieldset {
