--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -14,7 +14,7 @@
 }
 .formularioContacto{
     margin-top: 50px;
-    padding: 100px 100px 50px 100px;
+    padding: 10%;
     font-size: 14pt;
     font-family: 'Roboto Condensed', sans-serif;
     fieldset{
