se modifica movil responsive en info y sobre-mi

--- a/scss/_sobremi.scss
+++ b/scss/_sobremi.scss
@@ -1,5 +1,5 @@
 .sobreMi{
-    padding: 10px 100px 50px 100px;
+    padding: 10%;
     h2 {
         text-decoration:underline;
         padding: 20px 20px 20px 0px;
