--- a/css/estilo.css
+++ b/css/estilo.css
@@ -66,7 +66,7 @@ header {
   width: 100%; }
 
 .informacion {
-  padding: 10px 100px 50px 100px; }
+  padding: 10%; }
   .informacion h2 {
     text-decoration: underline;
     padding: 20px 20px 20px 0px; }
@@ -143,7 +143,7 @@ header {
       text-align: center; }
 
 .sobreMi {
-  padding: 10px 100px 50px 100px; }
+  padding: 10%; }
   .sobreMi h2 {
     text-decoration: underline;
     padding: 20px 20px 20px 0px; }
