--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -63,7 +63,7 @@
     }
 }
 .preguntasFrecuentes {
-    padding: 50px 100px 50px 100px;
+    padding: 10%;
     h2 {
         text-align: center;
         text-decoration:underline;
