--- a/scss/_sobremi.scss
+++ b/scss/_sobremi.scss
@@ -11,5 +11,7 @@
         width: 20vw;
         border-radius: $completo/2;
         float: right;
+        box-shadow: 5px 5px 5px  grey;
+        opacity: .9;
     }
 }
