se cambia boton de volver arriba de footer por flecha

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -275,17 +275,20 @@ header {
   justify-content: space-between;
   background: linear-gradient(to right, #d16a78, #ffffff); }
   .footer .boton {
-    padding: 0;
-    width: 100px;
-    background-color: #2f3030; }
+    padding: 5px;
+    width: 100px; }
     .footer .boton a {
       color: #ffffff;
       text-decoration: none; }
   .footer .redesSociales {
-    padding: 0; }
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between; }
     .footer .redesSociales a {
+      margin-left: 15px;
       color: #8d8c86;
-      margin-left: 20px;
       width: 30px; }
       .footer .redesSociales a img {
         width: 40px;
@@ -298,6 +301,16 @@ header {
     margin: 2px 0 0;
     letter-spacing: normal;
     word-spacing: normal; }
+
+@media only screen and (max-width: 390px) {
+  .redesSociales {
+    display: flex;
+    flex-direction: column;
+    justify-content: right; }
+    .redesSociales a {
+      margin-left: 0; }
+  html {
+    text-align: justify; } }
 
 .error-404 {
   display: none; }
