--- a/css/estilo.css
+++ b/css/estilo.css
@@ -277,9 +277,6 @@ header {
   .footer .boton {
     padding: 5px;
     width: 100px; }
-    .footer .boton a {
-      color: #ffffff;
-      text-decoration: none; }
   .footer .redesSociales {
     padding: 10px;
     display: flex;
@@ -302,8 +299,10 @@ header {
     letter-spacing: normal;
     word-spacing: normal; }
 
-@media only screen and (max-width: 390px) {
+@media only screen and (max-width: 406px) {
   .redesSociales {
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: right; }
