--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -13,10 +13,6 @@
     .boton {
         padding: 5px;
         width: 100px;
-        a {
-            color: #ffffff;
-            text-decoration: none;
-        }
     }
     .redesSociales{
         padding: 10px;
@@ -45,8 +41,10 @@
         word-spacing: normal;
     }
 }
-@media only screen and (max-width: 390px) {
+@media only screen and (max-width: 406px) {
     .redesSociales {
+        margin: 0;
+        padding: 0;
         display: flex;
         flex-direction: column;
         justify-content: right;
